# rematter

./: .aliases  .gitignore  .markdownlint.yaml  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml  pyproject.toml  schema_docs.md
.claude/: biome.json  settings.json
.docs/: architecture.md  config-and-media.md  mermaid-rendering.md  sync-pipeline.md  validate-command.md
.github/workflows/: ci-testbox.yml  ci.yml  release.yml
scripts/: clear_synced.py  fix_literal_formats.py
src/rematter/: __init__.py  _core.py  _workers.py  cli.py
tests/: conftest.py  test_date_extract.py  test_filename.py  test_helpers.py  test_sync.py  test_transform.py  test_validate.py
tests/fixtures/: A Pattern Language Towns, Buildings, Construction.md  Andy Matuschak.md  DuckDB.md  Fallen Angels.md  Learning to learn.md  Linear git narratives.md  Why Books Don't Work.md  Wikidata.md  Winnie's AI Maxims.md  Wong Kar Wai.md  World Bank Data Catalog.md  XmR charts.md  Your mind is a tool, for magic.md  Your mind is a tool, for magic_1.md  Zhuangzi - The Complete Writings.md
tests/mock_source/: .rematter.yaml  Linear git narratives.md  Mermaid Diagram and Table.md  _schema.yml
