[project]
name = "rematter"
version = "0.1.0"
description = "Frontmatter transformation tool for Obsidian vaults"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.9",
  "rich>=13",
  "pyyaml>=6",
  "typing-extensions>=4",
  "python-slugify>=8.0.4",
  "pytest~=9.0.3",
  "pygments~=2.20.0",
]

[project.scripts]
rematter = "rematter.cli:app"

[project.urls]
Homepage = "https://github.com/supermodellabs/rematter"
Repository = "https://github.com/supermodellabs/rematter"
Issues = "https://github.com/supermodellabs/rematter/issues"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
tmp_path_retention_policy = "none"

[tool.hatch.build.targets.wheel]
packages = ["src/rematter"]

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = ["FURB"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
